# template-backend-python

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .trivyignore  Dockerfile  PLAN.md  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  reusable-push.yml
src/: main.py  models.py
tests/: test_health.py  test_items.py
